0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:


Loading of experimental NMR data
=================================

In this example, we load a NMR dataset (in the Bruker format) and plot it.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 19-21

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 22-23

`datadir.path` contains the path to a default data directory.

.. GENERATED FROM PYTHON SOURCE LINES 23-28

.. code-block:: default


    datadir = scp.preferences.datadir

    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 29-30

load the data in a new dataset

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default


    ndd = scp.nmr.read_topspin(path, expno=1, remove_digital_filter=True)








.. GENERATED FROM PYTHON SOURCE LINES 34-35

view it...

.. GENERATED FROM PYTHON SOURCE LINES 35-37

.. code-block:: default


    _ = ndd.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-39

Now load a 2D  dataset

.. GENERATED FROM PYTHON SOURCE LINES 39-44

.. code-block:: default


    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_2d"
    ndd = scp.nmr.read_topspin(path, expno=1, remove_digital_filter=True)
    _ = ndd.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/plugins/spectrochempy-nmr/src/spectrochempy_nmr/nmrglue.py:1023: UserWarning: (196608,)cannot be shaped into(147, 1024)
      _, data = read_binary(f, shape=shape, cplex=cplex, big=big, isfloat=isfloat)




.. GENERATED FROM PYTHON SOURCE LINES 45-47

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 47-50

.. code-block:: default


    # scp.show()









.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.288 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_nmr_from_bruker.py <plot_read_nmr_from_bruker.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_nmr_from_bruker.ipynb <plot_read_nmr_from_bruker.ipynb>`
